--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2004-09-17	blytkerchan
+	* config.sub: new file
+	* config.guess: ditto
+	* install-sh: ditto
+	* Makefile.in.in [MODULES]: add $$__MODULES__$$ bootstrap variable
+	[real_all]: add $(PROGRAMS) as a dependency
+	* bootstrap (gen_makefile_in): generate $$__MODULES__$$ bootstrap var
+	(main-level code): don't locate & copy install-sh: it's in CVS now
+
 2004-09-16	blytkerchan	towards a working build
 	* Makefile.in.in: remove all references to libtool
 	* bootstrap (gen_link_mk): use $(OBJ) in stead of $(OBJS)
